--- a/hooks/package.json
+++ b/hooks/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "@types/express": "^4.17.21"
+  },
+  "devDependencies": {
+    "prisma": "^5.17.0"
   }
 }
