--- a/processor/package.json
+++ b/processor/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "kafkajs": "^2.2.4"
+    "@prisma/client": "^5.17.0",
+    "kafkajs": "^2.2.4",
+    "prisma": "^5.17.0"
   }
 }
