--- a/primary--backend/package.json
+++ b/primary--backend/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "tsc -b && node dist/index.js"
+    "dev": "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "prisma": "^5.17.0",
+    "zod": "^3.23.8"
   }
 }
