--- a/worker/package.json
+++ b/worker/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "kafkajs": "^2.2.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.17.0"
   }
 }
