sending email logic

--- a/worker/.env
+++ b/worker/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:secretpassword@localhost:5432/postgres"
+SOL_PRIVATE_KEY="fffefrefefefef"
+SMTP_USERNAME="fdnndffeif"
+SMTP_PASSWORD="dfkjdhfjkfhdf"
+SMTP_ENDPOINT="laslalalaal"
