--- a/worker/package.json
+++ b/worker/package.json
@@ -11,7 +11,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.17.0",
-    "kafkajs": "^2.2.4"
+    "@types/nodemailer": "^6.4.15",
+    "dotenv": "^16.4.5",
+    "kafkajs": "^2.2.4",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "prisma": "^5.17.0"
